# HCMUS-CSC18101-AI-for-Security

./: hello.py  pyproject.toml
lab_1/: code.ipynb  model_ui.py  spam_classifier_model.pkl  tfidf_vectorizer.pkl
lab_1/Source/: README.md  code.ipynb  model_ui.py  requirements.txt
lab_2/: lab2-ai4secu.ipynb
lab_3/: Data_finance_lab3.xlsx  source.ipynb
lab_4/: client.py  lab-4-resnet.ipynb  server.py
