[project]
name = "hcmus-csc18101-ai-for-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
